--- a/indices/content.html
+++ b/indices/content.html
@@ -25,61 +25,55 @@
                     <h1>Dark Mode com CSS — mudando a aparência do Blog de maneira simples e rápida</h1>
                 </div>
 
-                <div id="card-author">
+                <div id="card-content">
                     <p>Por Thiago Marinho</p>
-                </div>
-
-                <div id="card-time">
                     <span class="material-icons">
                         schedule
                         </span>
                         <p>3 MIN</p>
-                </div>              
+                </div>             
             </div>
 
             <div class="card">
                 <div id="card-image-conteiner">
-                    <img src="https://blog.rocketseat.com.br/content/images/2020/10/dark-mode-com-css-mudando-a-aparencia-do-blog-de-maneira-simples-e-rapida.jpg" alt="Imagem">
+                    <img src="https://blog.rocketseat.com.br/content/images/2020/11/blog-thumb-utilizando-mapas-no-react-com-leaflet-1.jpg" alt="Imagem">
                 </div>
 
                 <div id="card-title">
-                    <h1>Dark Mode com CSS — mudando a aparência do Blog de maneira simples e rápida</h1>
+                    <h1>Mapas com React usando Leaflet</h1>
                 </div>
 
-                <div id="card-author">
+                <div id="card-content">
                     <p>Por Thiago Marinho</p>
-                </div>
-
-                <div id="card-time">
                     <span class="material-icons">
                         schedule
                         </span>
-                        <p>3 MIN</p>
-                </div>              
+                        <p>11 MIN</p>
+                </div>             
             </div>
 
             <div class="card">
                 <div id="card-image-conteiner">
-                    <img src="https://blog.rocketseat.com.br/content/images/2020/10/dark-mode-com-css-mudando-a-aparencia-do-blog-de-maneira-simples-e-rapida.jpg" alt="Imagem">
+                    <img src="https://blog.rocketseat.com.br/content/images/2020/11/thumb-como-renomear-varios-arquivos-de-uma-vez-usando-o-terminal.jpg" alt="Imagem">
                 </div>
 
                 <div id="card-title">
-                    <h1>Dark Mode com CSS — mudando a aparência do Blog de maneira simples e rápida</h1>
+                    <h1>Como renomear vários arquivos de uma vez usando o terminal</h1>
                 </div>
 
-                <div id="card-author">
+                <div id="card-content">
                     <p>Por Thiago Marinho</p>
-                </div>
-
-                <div id="card-time">
                     <span class="material-icons">
                         schedule
                         </span>
-                        <p>3 MIN</p>
-                </div>              
+                        <p>2 MIN</p>
+                </div>             
             </div>
-
         </section>
+
+        <div class="modal-overlay">
+            
+        </div>
     </body>
 </body>
 </html>
