--- a/indices/content.html
+++ b/indices/content.html
@@ -16,7 +16,7 @@
     </header>
     <body>
         <section class="cards">
-            <div class="card">
+            <div class="card" id="dark-mode-com-css-mudando-a-aparencia-do-blog-de-maneira-simples-e-rapida">
                 <div id="card-image-conteiner">
                     <img src="https://blog.rocketseat.com.br/content/images/2020/10/dark-mode-com-css-mudando-a-aparencia-do-blog-de-maneira-simples-e-rapida.jpg" alt="Imagem">
                 </div>
@@ -34,9 +34,9 @@
                 </div>             
             </div>
 
-            <div class="card">
+            <div class="card" id="construindo-um-app-com-mapas-usando-react-native-maps-e-mapbox">
                 <div id="card-image-conteiner">
-                    <img src="https://blog.rocketseat.com.br/content/images/2020/11/blog-thumb-utilizando-mapas-no-react-com-leaflet-1.jpg" alt="Imagem">
+                    <img src="https://blog.rocketseat.com.br/content/images/2020/10/teste.jpg" alt="Imagem">
                 </div>
 
                 <div id="card-title">
@@ -48,11 +48,11 @@
                     <span class="material-icons">
                         schedule
                         </span>
-                        <p>11 MIN</p>
+                        <p>8 MIN</p>
                 </div>             
             </div>
 
-            <div class="card">
+            <div class="card" id="como-renomear-varios-arquivos-de-uma-vez-usando-o-terminal">
                 <div id="card-image-conteiner">
                     <img src="https://blog.rocketseat.com.br/content/images/2020/11/thumb-como-renomear-varios-arquivos-de-uma-vez-usando-o-terminal.jpg" alt="Imagem">
                 </div>
@@ -71,9 +71,24 @@
             </div>
         </section>
 
-        <div class="modal-overlay">
+        <div class="modal-overlay active">
+            <div class="modal">
+                <a class="close-modal">
+                    <i class="material-icons">close</i>
+                </a>
+
+                <a class="maximize-modal">
+                    <i class="material-icons">open_in_full</i>
+                </a>
+
+                <div class="modal-content">
+                    <iframe src="" frameborder="0"></iframe>
+                </div>
+            </div>
             
         </div>
+
+        <script src="/scripts/script.js"></script>
     </body>
 </body>
 </html>
